update portfolio website

--- a/index.html
+++ b/index.html
@@ -811,7 +811,7 @@
       
       <a href="./resume.pdf" download="Wassef_Aragou_Resume.pdf" class="download-resume-btn">
         <i class="fas fa-download"></i>
-        Download Resume
+        Download My Resume
       </a>
     </div>
   </div>
