--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
     /* Header */
     header {
       background: rgba(255, 255, 255, 0.95);
+      -webkit-backdrop-filter: blur(20px);
       backdrop-filter: blur(20px);
       padding: 1.2rem 2rem;
       position: sticky;
@@ -726,16 +727,428 @@
       animation: fadeInUp 0.6s ease-out;
     }
 
+    /* Mobile Menu Toggle */
+    .menu-toggle {
+      display: none;
+      flex-direction: column;
+      gap: 5px;
+      background: none;
+      border: none;
+      cursor: pointer;
+      padding: 0.5rem;
+    }
+
+    .menu-toggle span {
+      width: 25px;
+      height: 3px;
+      background: #667eea;
+      border-radius: 3px;
+      transition: all 0.3s;
+    }
+
     /* Responsive */
+    @media (max-width: 1024px) {
+      .grid-2 {
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      }
+      .grid-3 {
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      }
+      .certificates-grid {
+        grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      }
+    }
+
     @media (max-width: 768px) {
-      .hero h1 { font-size: 2.5rem; }
-      h2 { font-size: 2rem; }
-      nav { gap: 1rem; }
-      .grid-2, .grid-3, .certificates-grid { grid-template-columns: 1fr; }
-      section { padding: 4rem 1.5rem; }
-      .card { padding: 1.8rem; }
-      .timeline { padding-left: 1.5rem; }
-      .profile-image { width: 150px; height: 150px; }
+      /* Header */
+      header {
+        padding: 1rem 1.5rem;
+      }
+
+      .header-content {
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 1rem;
+      }
+
+      .logo h1 {
+        font-size: 1.3rem;
+      }
+
+      nav {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 0.8rem;
+        font-size: 0.85rem;
+        justify-content: center;
+      }
+
+      nav a {
+        font-size: 0.85rem;
+        padding: 0.3rem 0;
+        white-space: nowrap;
+      }
+
+      /* Hero Section */
+      .hero {
+        min-height: unset;
+        padding: 3rem 1.5rem 2rem;
+      }
+
+      .hero h1 {
+        font-size: 2.2rem;
+        letter-spacing: -1px;
+        margin-bottom: 0.8rem;
+      }
+
+      .hero-subtitle {
+        font-size: 1.1rem;
+        margin-bottom: 1.5rem;
+        padding: 0 0.5rem;
+        line-height: 1.6;
+      }
+
+      .hero-label {
+        font-size: 0.8rem;
+        padding: 0.4rem 1rem;
+        margin-bottom: 1rem;
+      }
+
+      .profile-image {
+        width: 140px;
+        height: 140px;
+        border: 3px solid #ffffff;
+        box-shadow: 0 6px 24px rgba(102, 126, 234, 0.2), 0 0 0 6px rgba(102, 126, 234, 0.1);
+      }
+
+      .contact-info {
+        flex-direction: column;
+        gap: 1rem;
+        align-items: center;
+        margin-bottom: 1.5rem;
+      }
+
+      .contact-item {
+        font-size: 0.9rem;
+        justify-content: center;
+      }
+
+      .social-icons {
+        gap: 0.8rem;
+        margin-bottom: 1rem;
+      }
+
+      .social-icons a {
+        width: 44px;
+        height: 44px;
+        font-size: 1.2rem;
+      }
+
+      .download-resume-btn {
+        padding: 0.9rem 1.8rem;
+        font-size: 0.95rem;
+        margin-top: 1rem;
+      }
+
+      /* Sections */
+      section {
+        padding: 3rem 1.5rem;
+      }
+
+      .section-header {
+        margin-bottom: 2.5rem;
+      }
+
+      .section-label {
+        font-size: 0.75rem;
+        padding: 0.35rem 0.9rem;
+      }
+
+      h2 {
+        font-size: 1.8rem;
+        letter-spacing: -0.5px;
+      }
+
+      .section-subtitle {
+        font-size: 1rem;
+        padding: 0 1rem;
+      }
+
+      /* Cards */
+      .card {
+        padding: 1.5rem;
+        margin-bottom: 1.5rem;
+      }
+
+      .card strong {
+        font-size: 1.1rem;
+      }
+
+      .card-header {
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 0.8rem;
+      }
+
+      .card-date {
+        font-size: 0.85rem;
+        padding: 0.35rem 0.8rem;
+        align-self: flex-start;
+      }
+
+      .card-content {
+        font-size: 0.95rem;
+        margin-bottom: 1.2rem;
+        word-wrap: break-word;
+        overflow-wrap: break-word;
+      }
+
+      .tech-stack {
+        gap: 0.4rem;
+      }
+
+      .tech-tag {
+        font-size: 0.75rem;
+        padding: 0.35rem 0.7rem;
+      }
+
+      .card-link {
+        padding: 0.6rem 1.2rem;
+        font-size: 0.85rem;
+        width: 100%;
+        justify-content: center;
+      }
+
+      /* Grid Layouts */
+      .grid-2,
+      .grid-3,
+      .certificates-grid,
+      .skills-grid {
+        grid-template-columns: 1fr;
+        gap: 1.5rem;
+      }
+
+      /* Timeline */
+      .timeline {
+        padding-left: 1.2rem;
+      }
+
+      .timeline::before {
+        left: 0;
+      }
+
+      .timeline-item {
+        margin-bottom: 2rem;
+      }
+
+      .timeline-item::before {
+        left: -1.7rem;
+        width: 10px;
+        height: 10px;
+        border: 2px solid #ffffff;
+      }
+
+      /* Skills */
+      .skill-card {
+        padding: 1.5rem;
+      }
+
+      .skill-icon {
+        width: 45px;
+        height: 45px;
+        margin-bottom: 1.2rem;
+      }
+
+      .skill-icon i {
+        font-size: 1.3rem;
+      }
+
+      .skill-card h3 {
+        font-size: 1.1rem;
+        margin-bottom: 0.8rem;
+      }
+
+      .skill-tags {
+        gap: 0.5rem;
+      }
+
+      .skill-tag {
+        font-size: 0.8rem;
+        padding: 0.45rem 0.9rem;
+      }
+
+      /* Certificates */
+      .cert-card {
+        padding: 1.5rem;
+      }
+
+      .cert-logo {
+        width: 70px;
+        height: 70px;
+        margin-bottom: 1.2rem;
+      }
+
+      .cert-logo img {
+        width: 50px;
+        height: 50px;
+      }
+
+      .cert-card h3 {
+        font-size: 1rem;
+      }
+
+      .cert-issuer {
+        font-size: 0.85rem;
+      }
+
+      .cert-badge {
+        font-size: 0.8rem;
+        padding: 0.4rem 0.9rem;
+      }
+
+      .cert-link {
+        padding: 0.6rem 1.2rem;
+        font-size: 0.85rem;
+        width: 100%;
+        justify-content: center;
+      }
+
+      /* Footer */
+      footer {
+        padding: 2.5rem 1.5rem;
+      }
+
+      footer > div > div:first-child {
+        flex-direction: column;
+        text-align: center !important;
+        gap: 2rem;
+      }
+
+      footer > div > div:first-child > div:first-child {
+        text-align: center !important;
+      }
+
+      footer > div > div:first-child > div:last-child {
+        text-align: center !important;
+      }
+
+      footer .social-icons {
+        justify-content: center !important;
+      }
+
+      footer h3 {
+        font-size: 1.3rem !important;
+      }
+
+      footer p {
+        font-size: 0.9rem;
+      }
+
+      .download-resume-btn {
+        width: 100%;
+        justify-content: center;
+      }
+    }
+
+    @media (max-width: 480px) {
+      /* Extra small devices */
+      header {
+        padding: 0.8rem 1rem;
+      }
+
+      .logo h1 {
+        font-size: 1.2rem;
+      }
+
+      nav {
+        gap: 0.6rem;
+        font-size: 0.8rem;
+      }
+
+      nav a {
+        font-size: 0.8rem;
+      }
+
+      .hero {
+        padding: 2rem 1rem 1.5rem;
+      }
+
+      .hero h1 {
+        font-size: 1.8rem;
+        line-height: 1.2;
+      }
+
+      .hero-subtitle {
+        font-size: 1rem;
+        line-height: 1.5;
+      }
+
+      .profile-image {
+        width: 120px;
+        height: 120px;
+      }
+
+      .contact-item {
+        font-size: 0.85rem;
+      }
+
+      .contact-item span,
+      .contact-item a {
+        word-break: break-word;
+      }
+
+      section {
+        padding: 2.5rem 1rem;
+      }
+
+      h2 {
+        font-size: 1.6rem;
+      }
+
+      .card {
+        padding: 1.2rem;
+      }
+
+      .card strong {
+        font-size: 1rem;
+      }
+
+      .card-content {
+        font-size: 0.9rem;
+      }
+
+      .tech-tag {
+        font-size: 0.7rem;
+        padding: 0.3rem 0.6rem;
+      }
+
+      .section-header {
+        margin-bottom: 2rem;
+      }
+
+      .timeline {
+        padding-left: 1rem;
+      }
+
+      .timeline-item::before {
+        left: -1.5rem;
+        width: 8px;
+        height: 8px;
+      }
+
+      .skill-card,
+      .cert-card {
+        padding: 1.2rem;
+      }
+
+      footer {
+        padding: 2rem 1rem;
+      }
+
+      .download-resume-btn {
+        padding: 0.8rem 1.5rem;
+        font-size: 0.9rem;
+      }
     }
 
     /* Scrollbar */
@@ -772,8 +1185,9 @@
         <a href="#education">Education</a>
         <a href="#experience">Experience</a>
         <a href="#projects">Projects</a>
-        <a href="#skills">Skills</a>
         <a href="#certificates">Certificates</a>
+        <a href="#skills">Skills</a>
+
       </nav>
     </div>
   </header>
@@ -1128,7 +1542,7 @@
           </div>
           <a href="./resume.pdf" download="Wassef_Aragou_Resume.pdf" class="download-resume-btn" style="margin-top: 1rem;">
             <i class="fas fa-download"></i>
-            Download Resume
+            Download My Resume
           </a>
         </div>
         <div style="text-align: right;">
@@ -1167,19 +1581,21 @@
 
     document.querySelectorAll('.card, .skill-card, .cert-card').forEach(el => observer.observe(el));
 
-    // Parallax effect for orbs
-    document.addEventListener('mousemove', (e) => {
-      const orbs = document.querySelectorAll('.orb');
-      const mouseX = e.clientX / window.innerWidth;
-      const mouseY = e.clientY / window.innerHeight;
-      
-      orbs.forEach((orb, index) => {
-        const speed = (index + 1) * 20;
-        const x = (mouseX - 0.5) * speed;
-        const y = (mouseY - 0.5) * speed;
-        orb.style.transform = `translate(${x}px, ${y}px)`;
+    // Parallax effect for orbs (disabled on mobile for performance)
+    if (window.innerWidth > 768) {
+      document.addEventListener('mousemove', (e) => {
+        const orbs = document.querySelectorAll('.orb');
+        const mouseX = e.clientX / window.innerWidth;
+        const mouseY = e.clientY / window.innerHeight;
+        
+        orbs.forEach((orb, index) => {
+          const speed = (index + 1) * 20;
+          const x = (mouseX - 0.5) * speed;
+          const y = (mouseY - 0.5) * speed;
+          orb.style.transform = `translate(${x}px, ${y}px)`;
+        });
       });
-    });
+    }
   </script>
 </body>
 </html>
